adicionei as 3 linhas no final

--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,8 @@
     <div>         
     <img src="lion.png" class="borderImg">
     </div>
-    
+    <h1>H1- I should build a tree swing</h1>
+    <h2>H2- I hope the rope doesn't break</h2>    
     <!--
     <ul>
         <li>I love to Skate</li>
