Corrigi o erro de tag aberta

--- a/Index.html
+++ b/Index.html
@@ -41,6 +41,7 @@
         <div><mark> mark my words</mark></div>
     <a href="#">Clique bem aqui</a>
     </div>-->
+    </div>
     
     </body>    
 </html>
