Fim da aula de estilos de texto e formatação. Seção 3, aula 21

--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,16 @@
     <img src="lion.png" class="borderImg">
     </div>
     <h1>H1- I should build a tree swing</h1>
-    <h2>H2- I hope the rope doesn't break</h2>    
+    <h2>H2- I hope the rope doesn't break</h2> 
+    <div class="formatting">
+        <div><b>Teste de NEGRITO</b></div>
+        <div><i>Teste de Itálico</i></div>
+        <div><em>Ênfase...</em></div>
+        <div><strong>I am so STRONG</strong></div>
+        <div><del>Please dont delete ME</del></div>
+        <div><mark>MARK my words...</mark></div>
+        </div>
+    <a href="#">Click me now</a>    
     <!--
     <ul>
         <li>I love to Skate</li>
