Aula sobre fontes, adicionei 3 fontes do Google.

--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>I love CSS</title>
+    <link href="https://fonts.googleapis.com/css?family=Macondo|Open+Sans+Condensed:300|Spirax" rel="stylesheet">
     <link rel="stylesheet" href="Index.css">
 </head>
     
